--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  overflow: overlay;
 }
 
 .fancyAnimatedBackground {
