Update board rendering for layered boards.
- Revert "3D" perspective for displaying left/right edges.
- Support tile coordinates array with null entries (for empty) and array entries (for stacking tiles).
- Support tile "half-stepping" for shifting them a half-tile in the right or down direction.

--- a/src/game/board/GameBoard.css
+++ b/src/game/board/GameBoard.css
@@ -55,29 +55,29 @@
 
 .game-board-emoji .game-tile span {
   color: black;
-  text-shadow: 0 0.06em 0 lightgrey, 0 0.12em 0 teal;
+  text-shadow: 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
 }
 
 @media (hover: hover) {
   .game-board-emoji .game-tile span:hover {
     color: #000000b0;
-    text-shadow: 0 0 0.3em yellow, 0 0 0 black, 0 0.06em 0 lightgrey, 0 0.12em 0 teal;
+    text-shadow: 0 0 0.3em yellow, 0 0 0 black, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
   }
 }
 
 .game-board-emoji .game-tile span.game-tile-selected {
   color: #00000055;
-  text-shadow: 0 0 0.3em yellow, 0 0 0 black, 0 0.06em 0 lightgrey, 0 0.12em 0 teal;
+  text-shadow: 0 0 0.3em yellow, 0 0 0 black, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
 }
 
 .game-board-emoji .game-tile span.game-tile-hint-all {
   color: #000000b0;
-  text-shadow: 0 0 0 red, 0 0.06em 0 lightgrey, 0 0.12em 0 teal;
+  text-shadow: 0 0 0 red, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
 }
 
 .game-board-emoji .game-tile span.game-tile-hint-current {
   color: #000000b0;
-  text-shadow: 0 0 0 blue, 0 0.06em 0 lightgrey, 0 0.12em 0 teal;
+  text-shadow: 0 0 0 blue, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
 }
 
 .game-board-glyph .game-tile span:before {
@@ -86,7 +86,7 @@
   z-index: -1;
   font-weight: bolder;
   color: white;
-  text-shadow: 0 0.06em 0 lightgrey, 0 0.12em 0 teal;
+  text-shadow: 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
 }
 
 .game-board-glyph .game-tile span {
@@ -119,7 +119,7 @@
 @media (hover: hover) {
   .game-board-glyph .game-tile span:hover:before {
     color: #fcfcd9;
-    text-shadow: 0 0 0.2em yellow, 0 0.06em 0 lightgrey, 0 0.12em 0 teal;
+    text-shadow: 0 0 0.2em yellow, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
   }
 
   .game-board-glyph .game-tile span:hover {
@@ -149,17 +149,17 @@
 
 .game-board-glyph .game-tile span.game-tile-selected:before {
   color: #f5f5a7;
-  text-shadow: 0 0 0.2em yellow, 0 0.06em 0 lightgrey, 0 0.12em 0 teal;
+  text-shadow: 0 0 0.2em yellow, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
 }
 
 .game-board-glyph .game-tile span.game-tile-hint-all:before {
   color: #f5a7a7;
-  text-shadow: 0 0.06em 0 lightgrey, 0 0.12em 0 teal;
+  text-shadow: 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
 }
 
 .game-board-glyph .game-tile span.game-tile-hint-current:before {
   color: #a7a7f5;
-  text-shadow: 0 0.06em 0 lightgrey, 0 0.12em 0 teal;
+  text-shadow: 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
 }
 
 .game-board-glyph .game-tile span.game-tile-selected,
