--- a/src/game/board/GameBoard.css
+++ b/src/game/board/GameBoard.css
@@ -15,6 +15,7 @@
   font-family: "Segoe UI Emoji";
   line-height: 1.1em;
   letter-spacing: -0.25em;
+  display: inline-block;
 }
 
 .game-board-glyph {
@@ -22,6 +23,11 @@
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   line-height: 0.9em;
+  display: inline-block;
+}
+
+.game-board-pad {
+  padding: 1em;
 }
 
 .game-board-emoji div {
