Update tile appearance for better layered tiles.

--- a/src/game/board/GameBoard.css
+++ b/src/game/board/GameBoard.css
@@ -61,29 +61,29 @@
 
 .game-board-emoji .game-tile span {
   color: black;
-  text-shadow: 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
+  text-shadow: 0.09em 0.09em 0 lightgrey, 0.16em 0.16em 0 teal, 0.16em 0.16em 0.32em black;
 }
 
 @media (hover: hover) {
   .game-board-emoji .game-tile span:hover {
     color: #000000b0;
-    text-shadow: 0 0 0.3em yellow, 0 0 0 black, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
+    text-shadow: 0 0 0.3em yellow, 0 0 0 black, 0.09em 0.09em 0 lightgrey, 0.16em 0.16em 0 teal, 0.16em 0.16em 0.32em black;
   }
 }
 
 .game-board-emoji .game-tile span.game-tile-selected {
   color: #00000055;
-  text-shadow: 0 0 0.3em yellow, 0 0 0 black, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
+  text-shadow: 0 0 0.3em yellow, 0 0 0 black, 0.09em 0.09em 0 lightgrey, 0.16em 0.16em 0 teal, 0.16em 0.16em 0.32em black;
 }
 
 .game-board-emoji .game-tile span.game-tile-hint-all {
   color: #000000b0;
-  text-shadow: 0 0 0 red, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
+  text-shadow: 0 0 0 red, 0.09em 0.09em 0 lightgrey, 0.16em 0.16em 0 teal, 0.16em 0.16em 0.32em black;
 }
 
 .game-board-emoji .game-tile span.game-tile-hint-current {
   color: #000000b0;
-  text-shadow: 0 0 0 blue, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
+  text-shadow: 0 0 0 blue, 0.09em 0.09em 0 lightgrey, 0.16em 0.16em 0 teal, 0.16em 0.16em 0.32em black;
 }
 
 .game-board-glyph .game-tile span:before {
@@ -92,7 +92,7 @@
   z-index: -1;
   font-weight: bolder;
   color: white;
-  text-shadow: 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
+  text-shadow: 0.09em 0.09em 0 lightgrey, 0.16em 0.16em 0 teal, 0.16em 0.16em 0.32em black;
 }
 
 .game-board-glyph .game-tile span {
@@ -125,7 +125,7 @@
 @media (hover: hover) {
   .game-board-glyph .game-tile span:hover:before {
     color: #fcfcd9;
-    text-shadow: 0 0 0.2em yellow, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
+    text-shadow: 0 0 0.2em yellow, 0.09em 0.09em 0 lightgrey, 0.16em 0.16em 0 teal, 0.16em 0.16em 0.32em black;
   }
 
   .game-board-glyph .game-tile span:hover {
@@ -155,17 +155,17 @@
 
 .game-board-glyph .game-tile span.game-tile-selected:before {
   color: #f5f5a7;
-  text-shadow: 0 0 0.2em yellow, 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
+  text-shadow: 0 0 0.2em yellow, 0.09em 0.09em 0 lightgrey, 0.16em 0.16em 0 teal, 0.16em 0.16em 0.32em black;
 }
 
 .game-board-glyph .game-tile span.game-tile-hint-all:before {
   color: #f5a7a7;
-  text-shadow: 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
+  text-shadow: 0.09em 0.09em 0 lightgrey, 0.16em 0.16em 0 teal, 0.16em 0.16em 0.32em black;
 }
 
 .game-board-glyph .game-tile span.game-tile-hint-current:before {
   color: #a7a7f5;
-  text-shadow: 0.07em 0.07em 0 lightgrey, 0.12em 0.12em 0 teal;
+  text-shadow: 0.09em 0.09em 0 lightgrey, 0.16em 0.16em 0 teal, 0.16em 0.16em 0.32em black;
 }
 
 .game-board-glyph .game-tile span.game-tile-selected,
