--- a/src/game/modal/Modal.css
+++ b/src/game/modal/Modal.css
@@ -42,8 +42,8 @@
   flex: 1;
 }
 
-@media (min-width: 720px) {
-  .GameModal .buttonMenu {
+@media (min-width: 1064px) {
+  .GameModal .buttonMenu.bm-limit3 {
     grid: auto-flow / repeat(3, 1fr);
   }
 }
