Add maximum width for modal.

--- a/src/game/modal/Modal.css
+++ b/src/game/modal/Modal.css
@@ -12,6 +12,8 @@
   text-align: center;
   border: 5px solid black;
   border-radius: 2em;
+  margin: auto;
+  max-width: 100ch;
 }
 
 .GameModal > div {
